--- a/cityzoom/service_layer/package.json
+++ b/cityzoom/service_layer/package.json
@@ -14,6 +14,9 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.19",
+    "mongoose-unique-validator": "^2.0.2",
+    "validator": "^10.11.0"
   }
 }
