--- a/cityzoom/service_layer/package.json
+++ b/cityzoom/service_layer/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/endpoints.js",
-    "dev": "nodemon src/endpoints.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,13 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
