--- a/data_layer/package.json
+++ b/data_layer/package.json
@@ -4,6 +4,8 @@
   "description": "data layer API",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ZePaiva",
@@ -12,5 +14,8 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "kafka-node": "^4.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
