--- a/data_layer/package.json
+++ b/data_layer/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "kafka-node": "^4.0.3"
+    "kafka-node": "^4.0.3",
+    "kafkajs": "^1.5.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
