--- a/data_layer/package.json
+++ b/data_layer/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "kafka-node": "^4.0.3",
-    "kafkajs": "^1.5.1"
+    "kafkajs": "^1.5.1",
+    "mongoose": "^5.4.20"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
