--- a/cityzoom/data_layer/configs/server_4.properties
+++ b/cityzoom/data_layer/configs/server_4.properties
@@ -62,7 +62,7 @@ log.dirs=../logs/broker_4.logs, /dev/broker_4.log
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
 # the brokers.
-num.partitions=3
+num.partitions=5
 
 # The number of threads per data directory to be used for log recovery at startup and flushing at shutdown.
 # This value is recommended to be increased for installations with data dirs located in RAID array.
@@ -134,3 +134,6 @@ zookeeper.connection.timeout.ms=6000
 # We override this to 0 here as it makes for a better out-of-the-box experience for development and testing.
 # However, in production environments the default value of 3 seconds is more suitable as this will help to avoid unnecessary, and potentially expensive, rebalances during application startup.
 group.initial.rebalance.delay.ms=0
+
+############################# Topic Deletion Settings #############################
+delete.topic.enable=true
