vue grid-layout

--- a/cityzoom-nuxt/package.json
+++ b/cityzoom-nuxt/package.json
@@ -19,7 +19,8 @@
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "sass": "^1.17.3",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-grid-layout": "^2.3.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
