--- a/cityzoom-nuxt/package.json
+++ b/cityzoom-nuxt/package.json
@@ -16,6 +16,9 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
+    "crossfilter2": "^1.4.6",
+    "d3": "^5.9.2",
+    "dc": "^3.0.12",
     "js-cookie": "^2.2.0",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
