--- a/cityzoom-nuxt/package.json
+++ b/cityzoom-nuxt/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
+    "build": "NUXT_HOST=0.0.0.0 NUXT_PORT=3000 nuxt build",
+    "start": "NUXT_HOST=0.0.0.0 NUXT_PORT=3000 nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
