--- a/cityzoom/service_layer/package.json
+++ b/cityzoom/service_layer/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "André Mourato",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.10"
