--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -14,10 +14,11 @@
   "author": "ZePaiva",
   "license": "MIT",
   "dependencies": {
+    "config": "^3.0.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "kafkajs": "^1.5.1",
-    "mongoose": "^5.0.1"
+    "mongoose": "^5.4.21"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
