--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -18,7 +18,9 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "kafkajs": "^1.5.1",
-    "mongoose": "^5.4.21"
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.21",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
