added jar files for execution on other machines

--- a/cityzoom/DataLayer/pom.xml
+++ b/cityzoom/DataLayer/pom.xml
@@ -8,10 +8,21 @@
     <artifactId>DataLayer</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modules>
-        <module>DataLayerCore-Broker</module>
-        <module>DataLayerInterface-WebApp</module>
+        <module>Sinks</module>
+        <module>ValuesSinks</module>
+        <module>DLAPI</module>
     </modules>
-
-
 </project>
