--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "NUXT_HOST=0.0.0.0 nuxt start",
+    "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -19,8 +19,9 @@
     "d3": "^5.9.2",
     "dc": "^3.0.12",
     "js-cookie": "^2.2.0",
-    "node-sass": "^4.11.0",
-    "nuxt": "^2.4.0",
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.6.3",
+    "ol": "^5.3.2",
     "sass": "^1.17.3",
     "sass-loader": "^7.1.0",
     "vue-grid-layout": "^2.3.4"
