updated streams with devices

--- a/cityzoom/DataLayer/pom.xml
+++ b/cityzoom/DataLayer/pom.xml
@@ -24,5 +24,7 @@
         <module>Sinks</module>
         <module>ValuesSinks</module>
         <module>DLAPI</module>
+        <module>KafkaStartUp</module>
+        <module>AlertsStreaming</module>
     </modules>
 </project>
