--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.6.3",
     "ol": "^5.3.2",
+    "rainbowvis.js": "^1.0.1",
     "sass": "^1.17.3",
     "sass-loader": "^7.1.0",
     "vue-grid-layout": "^2.3.4"
