--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -19,15 +19,16 @@
     "d3": "^5.9.2",
     "dc": "^3.0.12",
     "js-cookie": "^2.2.0",
-    "node-sass": "^4.12.0",
     "nuxt": "^2.6.3",
     "ol": "^5.3.2",
     "rainbowvis.js": "^1.0.1",
     "sass": "^1.17.3",
-    "sass-loader": "^7.1.0",
     "vue-grid-layout": "^2.3.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
   }
 }
