--- a/cityzoom/gateway_layer/package.json
+++ b/cityzoom/gateway_layer/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sockjs": "^0.3.19",
+    "sockjs-client": "^1.3.0",
+    "stompjs": "^2.3.3",
+    "ws": "^7.0.0"
   }
 }
