--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -23,7 +23,8 @@
     "ol": "^5.3.2",
     "rainbowvis.js": "^1.0.1",
     "sass": "^1.17.3",
-    "vue-grid-layout": "^2.3.4"
+    "vue-grid-layout": "^2.3.4",
+    "vue-js-modal": "^1.3.31"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
