--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -18,6 +18,7 @@
     "crossfilter2": "^1.4.6",
     "d3": "^5.9.2",
     "dc": "^3.0.12",
+    "fs": "0.0.1-security",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.6.3",
     "ol": "^5.3.2",
