--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ZePaiva",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^1.19.0"
+  },
+  "dependencies": {
+    "express": "^4.17.0",
+    "joi": "^14.3.1",
+    "mongoose": "^5.5.11"
+  }
 }
