--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -12,8 +12,12 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "config": "^3.1.0",
     "express": "^4.17.0",
+    "helmet": "^3.18.0",
     "joi": "^14.3.1",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "morgan": "^1.9.1"
   }
 }
