--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "DEBUG=app:* nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "author": "ZePaiva",
   "license": "MIT",
@@ -12,8 +14,14 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "config": "^3.1.0",
     "express": "^4.17.0",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^3.18.0",
     "joi": "^14.3.1",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.9.1"
   }
 }
