--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "DEBUG=app:* nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "react-scripts start",
+    "broker": "DEBUG=broker:* nodemon src/broker.js",
+    "index": "DEBUG=app:* nodemon src/index.js",
+    "dev": "gnome-terminal --tab -e \"npm run broker\" & gnome-terminal --tab -e \"npm run index\""
   },
-  "author": "ZePaiva",
+  "author": "andremourato@ua.pt&ZePaiva",
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^1.19.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "colors": "^1.3.3",
     "config": "^3.1.0",
     "express": "^4.17.0",
     "express-async-errors": "^3.1.1",
@@ -22,6 +24,8 @@
     "joi": "^14.3.1",
     "mongoose": "^5.5.11",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mosca": "^2.8.3",
+    "mqtt": "^2.18.8"
   }
 }
