--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -25,7 +25,8 @@
     "rainbowvis.js": "^1.0.1",
     "sass": "^1.17.3",
     "vue-grid-layout": "^2.3.4",
-    "vue-js-modal": "^1.3.31"
+    "vue-js-modal": "^1.3.31",
+    "vue-weather-widget": "^2.1.7"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
