--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "ag-grid-community": "^20.2.0",
+    "ag-grid-vue": "^20.2.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
@@ -26,6 +28,7 @@
     "sass": "^1.17.3",
     "vue-grid-layout": "^2.3.4",
     "vue-js-modal": "^1.3.31",
+    "vue-property-decorator": "^7.3.0",
     "vue-weather-widget": "^2.1.7"
   },
   "devDependencies": {
