--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -9,7 +9,7 @@
     "index": "DEBUG=app:* nodemon --watch routes/ --watch index.js --watch db/ --watch middleware.js --watch validation.js --watch producer.js src/index.js",
     "consumer": "DEBUG=app:Consumer nodemon --watch consumer.js src/consumer.js",
     "dev": "npm-run-all --parallel index consumer",
-    "all": "gnome-terminal --tab -e \"npm run broker\" & gnome-terminal --tab -e \"npm run index\""
+    "all": "gnome-terminal --tab -e \"npm run broker\" & gnome-terminal --tab -e \"npm run dev\""
   },
   "author": "andremourato@ua.pt&ZePaiva",
   "license": "MIT",
