--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -18,14 +18,15 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "@turf/helpers": "^6.1.4",
     "axios": "^0.18.0",
     "colors": "^1.3.3",
     "config": "^3.1.0",
     "express": "^4.17.0",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.18.0",
     "joi": "^14.3.1",
     "mongoose": "^5.5.11",
-    "express-async-errors": "^3.1.1",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
     "mosca": "^2.8.3",
