--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@turf/helpers": "^6.1.4",
+    "@turf/intersect": "^6.1.3",
     "@turf/turf": "^5.1.6",
     "ag-grid-community": "^20.2.0",
     "ag-grid-vue": "^20.2.0",
