--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -18,6 +18,7 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "@turf/boolean-point-in-polygon": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "axios": "^0.18.0",
     "colors": "^1.3.3",
