--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@turf/boolean-point-in-polygon": "^6.0.1",
     "@turf/helpers": "^6.1.4",
+    "async-mutex": "^0.1.3",
     "axios": "^0.18.0",
     "colors": "^1.3.3",
     "config": "^3.1.0",
