--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -19,6 +19,7 @@
     "ag-grid-vue": "^20.2.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "crossfilter2": "^1.4.6",
     "d3": "^5.9.2",
@@ -30,6 +31,7 @@
     "ol": "^5.3.2",
     "rainbowvis.js": "^1.0.1",
     "sass": "^1.17.3",
+    "vue-chartjs": "^3.4.2",
     "vue-grid-layout": "^2.3.4",
     "vue-js-modal": "^1.3.31",
     "vue-property-decorator": "^7.3.0",
