--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -21,6 +21,7 @@
     "@turf/boolean-point-in-polygon": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "async-mutex": "^0.1.3",
+    "await-mutex": "^1.0.2",
     "axios": "^0.18.0",
     "colors": "^1.3.3",
     "config": "^3.1.0",
