--- a/cityzoom/gateway_layer/package.json
+++ b/cityzoom/gateway_layer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "await-mutex": "^1.0.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "request": "^2.88.0",
