--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -14,6 +14,7 @@
   "author": "andremourato@ua.pt&ZePaiva",
   "license": "MIT",
   "devDependencies": {
+    "await-mutex": "^1.0.2",
     "nodemon": "^1.19.0",
     "npm-run-all": "^4.1.5"
   },
