--- a/mobile-app/app/src/main/AndroidManifest.xml
+++ b/mobile-app/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/cityzoom_logo_filled"
         android:label="CityZoom"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
