put alarms in a different server to check them all

--- a/cityzoom/data_layer/package.json
+++ b/cityzoom/data_layer/package.json
@@ -8,7 +8,8 @@
     "broker": "DEBUG=broker:* nodemon --watch broker.js src/broker.js",
     "index": "DEBUG=app:* nodemon --watch routes/ --watch index.js --watch db/ --watch middleware.js --watch validation.js --watch producer.js src/index.js",
     "consumer": "DEBUG=app:Consumer nodemon --watch consumer.js src/consumer.js",
-    "dev": "npm-run-all --parallel index consumer",
+    "alerts": "DEBUG=app:AlertManager nodemon --watch alerts.js src/alerts.js",
+    "dev": "npm-run-all --parallel index consumer alerts",
     "all": "gnome-terminal --tab -e \"npm run broker\" & gnome-terminal --tab -e \"npm run dev\"",
     "windows": "npm-run-all --parallel index-windows consumer-windows",
     "broker-windows": "nodemon --watch broker.js src/broker.js",
