Mobile app now compatible with every device

--- a/mobile-app/app/src/main/AndroidManifest.xml
+++ b/mobile-app/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:icon="@drawable/cityzoom_logo_filled"
         android:label="CityZoom"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
