--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -5,7 +5,7 @@
   "author": "Felix, GV",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "NUXT_HOST=0.0.0.0 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
