--- a/cityzoom/web_service/package.json
+++ b/cityzoom/web_service/package.json
@@ -11,6 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/axios": "^5.3.6",
     "@turf/helpers": "^6.1.4",
     "@turf/intersect": "^6.1.3",
@@ -22,12 +26,16 @@
     "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "crossfilter2": "^1.4.6",
+    "css-loader": "^2.1.1",
     "d3": "^5.9.2",
+    "datatables.net": "^1.10.19",
+    "datatables.net-bs": "^1.10.19",
     "dc": "^3.0.12",
     "fs": "0.0.1-security",
     "h3-js": "^3.4.3",
     "js-cookie": "^2.2.0",
     "nuxt": "^2.6.3",
+    "nuxt-fontawesome": "^0.4.0",
     "ol": "^5.3.2",
     "rainbowvis.js": "^1.0.1",
     "sass": "^1.17.3",
